--- a/views/index.html
+++ b/views/index.html
@@ -93,7 +93,7 @@
 					<section id="two" class="wrapper style3 fade-up">
 						<div class="inner">
 							<h2>What we do</h2>
-							<p>Phasellus convallis elit id ullamcorper pulvinar. Duis aliquam turpis mauris, eu ultricies erat malesuada quis. Aliquam dapibus, lacus eget hendrerit bibendum, urna est aliquam sem, sit amet imperdiet est velit quis lorem.</p>
+							<p>OkClean is an UK based company offering the best professional cleaning products on the market. There is no type of material our chemicals can’t deal with due to a specific formula of targeting individual types of stains. Every product was especially conceived for a certain type of dirt covering the entire range of surfaces: metal, wood, glass or rock. OkClean is also the best alternative for home cleaning where common products are not effective and make you work twice as hard. Our products are being used for over 10 years in all types of business such as hotels, restaurants, offices, schools or hospitals delivering satisfaction and confidence.</p>
 							<div class="features">
 								<section>
 									<span class="icon major fa-code"></span>
