--- a/views/index.html
+++ b/views/index.html
@@ -141,17 +141,17 @@
 									<ul class="contact">
 										<li>
 											<h3>Address</h3>
-											<span>12345 Somewhere Road #654<br />
-											Nashville, TN 00000-0000<br />
-											USA</span>
+											<span>72 Guysfield Drive<br />
+											London, Rainnham<br />
+											UK</span>
 										</li>
 										<li>
 											<h3>Email</h3>
-											<a href="#">user@untitled.tld</a>
+											<a href="#">okcleancouk@gmail.com</a>
 										</li>
 										<li>
 											<h3>Phone</h3>
-											<span>(000) 000-0000</span>
+											<span>+44 7521 986 130/span>
 										</li>
 										<li>
 											<h3>Social</h3>
