--- a/views/index.html
+++ b/views/index.html
@@ -151,7 +151,7 @@
 										</li>
 										<li>
 											<h3>Phone</h3>
-											<span>+44 7521 986 130/span>
+											<span>+44 7521 986 130</span>
 										</li>
 										<li>
 											<h3>Social</h3>
