--- a/views/index.html
+++ b/views/index.html
@@ -116,7 +116,7 @@
 					<section id="three" class="wrapper style1 fade-up">
 						<div class="inner">
 							<h2>Get in touch</h2>
-							<p>Phasellus convallis elit id ullamcorper pulvinar. Duis aliquam turpis mauris, eu ultricies erat malesuada quis. Aliquam dapibus, lacus eget hendrerit bibendum, urna est aliquam sem, sit amet imperdiet est velit quis lorem.</p>
+							<p>PContact us Fast & Easy by simply filling in your details and the products you are looking for.</p>
 							<div class="split style1">
 								<section>
 									<form method="post" action="#">
@@ -158,9 +158,8 @@
 											<ul class="icons">
 												<li><a href="#" class="fa-twitter"><span class="label">Twitter</span></a></li>
 												<li><a href="https://www.facebook.com/OkCleanUK/" class="fa-facebook"><span class="label">Facebook</span></a></li>
-												<li><a href="#" class="fa-youtube"><span class="label">YouTube</span></a></li>
-												<li><a href="#" class="fa-instagram"><span class="label">Instagram</span></a></li>
-												<li><a href="#" class="fa-linkedin"><span class="label">LinkedIn</span></a></li>
+												<li><a href="https://www.youtube.com/channel/UCINVsvv9n1E3XYnfs45J1pg" class="fa-youtube"><span class="label">YouTube</span></a></li>
+												
 											</ul>
 										</li>
 									</ul>
