what we do done

--- a/views/index.html
+++ b/views/index.html
@@ -97,13 +97,13 @@
 							<div class="features">
 								<section>
 									<span class="icon major fa-code"></span>
-									<h3>Lorem ipsum amet</h3>
-									<p>Phasellus convallis elit id ullam corper amet et pulvinar. Duis aliquam turpis mauris, sed ultricies erat dapibus.</p>
+									<h3>Important Information</h3>
+									<p>All of our products come in concentrated solutions and every cleaning product has its particular dilution fraction. When ordering you will be given the exact dilution for every product and also recommendations on how to be used in order to get the maximum effect.</p>
 								</section>
 								<section>
 									<span class="icon major fa-lock"></span>
-									<h3>Aliquam sed nullam</h3>
-									<p>Phasellus convallis elit id ullam corper amet et pulvinar. Duis aliquam turpis mauris, sed ultricies erat dapibus.</p>
+									<h3>How to order – Fast & Easy</h3>
+									<p>Choose your product or simply tell us what you need. As soon as we get your e-mail our operators will give you a price list of the products needed and they will also give you advices on how to use our products if you are buying for the first time. We can also offer you Monthly Offers if you buy a large quantity twice in the same month.</p>
 								</section>
 								
 								
