--- a/views/index.html
+++ b/views/index.html
@@ -156,7 +156,7 @@
 										<li>
 											<h3>Social</h3>
 											<ul class="icons">
-												<li><a href="#" class="fa-twitter"><span class="label">Twitter</span></a></li>
+												<li><a href="https://twitter.com/okcleancouk" class="fa-twitter"><span class="label">Twitter</span></a></li>
 												<li><a href="https://www.facebook.com/OkCleanUK/" class="fa-facebook"><span class="label">Facebook</span></a></li>
 												<li><a href="https://www.youtube.com/channel/UCINVsvv9n1E3XYnfs45J1pg" class="fa-youtube"><span class="label">YouTube</span></a></li>
 												
