--- a/views/index.html
+++ b/views/index.html
@@ -96,7 +96,7 @@
 							<p>OkClean is an UK based company offering the best professional cleaning products on the market. There is no type of material our chemicals can’t deal with due to a specific formula of targeting individual types of stains. Every product was especially conceived for a certain type of dirt covering the entire range of surfaces: metal, wood, glass or rock. OkClean is also the best alternative for home cleaning where common products are not effective and make you work twice as hard. Our products are being used for over 10 years in all types of business such as hotels, restaurants, offices, schools or hospitals delivering satisfaction and confidence.</p>
 							<div class="features">
 								<section>
-									<span class="icon major fa-code"></span>
+									<span class="icon major fa-exclamation-circle"></span>
 									<h3>Important Information</h3>
 									<p>All of our products come in concentrated solutions and every cleaning product has its particular dilution fraction. When ordering you will be given the exact dilution for every product and also recommendations on how to be used in order to get the maximum effect.</p>
 								</section>
@@ -116,7 +116,7 @@
 					<section id="three" class="wrapper style1 fade-up">
 						<div class="inner">
 							<h2>Get in touch</h2>
-							<p>PContact us Fast & Easy by simply filling in your details and the products you are looking for.</p>
+							<p>Contact us Fast & Easy by simply filling in your details and the products you are looking for.</p>
 							<div class="split style1">
 								<section>
 									<form method="post" action="#">
