--- a/views/index.html
+++ b/views/index.html
@@ -52,7 +52,7 @@
 							<div class="content">
 								<div class="inner">
 									<h2>Home Cleaning</h2>
-									<p>: Here you can order a wide range of Home Cleaning Chemicals and Disinfectants but also Bath & Body Care Products, Detergents & Balsams or Disposables ( Paper Rolls, Fresheners, Cleaning Gloves or Garbage Bags up to 240 Liters ). Feel free to contact us for any question or price offer. Check out our Facebook Page for the latest products.</p>
+									<p>Here you can order a wide range of Home Cleaning Chemicals and Disinfectants but also Bath & Body Care Products, Detergents & Balsams or Disposables ( Paper Rolls, Fresheners, Cleaning Gloves or Garbage Bags up to 240 Liters ). Feel free to contact us for any question or price offer. Check out our Facebook Page for the latest products.</p>
 									<ul class="actions">
 										<li><a href="#" class="button">Learn more</a></li>
 									</ul>
@@ -64,7 +64,7 @@
 							<div class="content">
 								<div class="inner">
 									<h2>Industrial Cleaning</h2>
-									<p>This section is dedicated to large consuming businesses where large amounts of Eco Friendly chemicals are required.  We can offer advantageous packages of chemicals which can fit any type of industry from <b> Restaurants, Hotels  to Offices or Hospitals</b>. Feel free to contact us for any question or price offer. Find Out more on our Facebook Page : OKClean</p>
+									<p>This section is dedicated to large consuming businesses where large amounts of Eco Friendly chemicals are required.  We can offer advantageous packages of chemicals which can fit any type of industry from <b> Restaurants, Hotels  to Offices or Hospitals</b>. Feel free to contact us for any question or price offer. Find Out more on our Facebook Page : OKClean.</p>
 									<ul class="actions">
 										<li><a href="#" class="button">Restaurants</a></li>
 										<li><a href="#" class="button">Hotels</a></li>
@@ -77,7 +77,23 @@
 							<div class="content">
 								<div class="inner">
 									<h2>Professional Cleaning</h2>
-									<p>Phasellus convallis elit id ullamcorper pulvinar. Duis aliquam turpis mauris, eu ultricies erat malesuada quis. Aliquam dapibus.</p>
+									<p>Simply choose the material you wish to clean. We can offer you free support for how to use dilutions or how to combine products in order to obtain the clean surface. Feel free to contact us for any question or price offer.</p>
+									<ul class="actions">
+										<li><a href="#" class="button">Wood</a></li>
+										<li><a href="#" class="button">Glass</a></li>
+										<li><a href="#" class="button">Metal</a></li>
+										<li><a href="#" class="button">Rock & Marble</a></li>
+
+									</ul>
+								</div>
+							</div>
+						</section>
+						<section>
+							<a href="#" class="image"><img src="images/pic03.jpg" alt="" data-position="25% 25%" /></a>
+							<div class="content">
+								<div class="inner">
+									<h2>Cleaning Machines</h2>
+									<p>At your request we can provide also dosing pumps for the industrial cleaning : dish washing machines or laundry washing machines. Feel free to choose from our wide range of  professional floor and carpet cleaning machines.</p>
 									<ul class="actions">
 										<li><a href="#" class="button">Wood</a></li>
 										<li><a href="#" class="button">Glass</a></li>
