--- a/views/index.html
+++ b/views/index.html
@@ -22,9 +22,8 @@
 				<div class="inner">
 					<nav>
 						<ul>
-							<li><a href="#one">About</a></li>
-							<li><a href="#one">Cleaning Chemicals</a></li>
-							<li><a href="#two">Cleaning Machines</a></li>
+							<li><a href="#two">About</a></li>
+							<li><a href="#one">Cleaning</a></li>
 							<li><a href="#three">Contact</a></li>
 						</ul>
 					</nav>
