--- a/views/index.html
+++ b/views/index.html
@@ -78,7 +78,7 @@
 									<h2>Professional Cleaning</h2>
 									<p>Simply choose the material you wish to clean. We can offer you free support for how to use dilutions or how to combine products in order to obtain the clean surface. Feel free to contact us for any question or price offer.</p>
 									<ul class="actions">
-										<li><a href="#" class="button">Wood</a></li>
+										<li><a href="#" class="button">Wood & Carpets</a></li>
 										<li><a href="#" class="button">Glass</a></li>
 										<li><a href="#" class="button">Metal</a></li>
 										<li><a href="#" class="button">Rock & Marble</a></li>
