--- a/views/index.html
+++ b/views/index.html
@@ -37,7 +37,7 @@
 					<section id="intro" class="wrapper style1 fullscreen fade-up">
 						<div align = "center" class="inner">
 							<h1 class="image"><img src="images/LOGO2.png"  alt="" data-position="center center" /></h1>
-							<p>Your professional solution for home and industrial cleaning</p>
+							<p style="color:white;"><b>Your professional solution for home and industrial cleaning</b></p>
 							<ul class="actions">
 								<li><a href="#one" class="button scrolly">Learn more</a></li>
 							</ul>
