--- a/views/index.html
+++ b/views/index.html
@@ -51,6 +51,11 @@
 									<h2>Home Cleaning</h2>
 									<p>Here you can order a wide range of Home Cleaning Chemicals and Disinfectants but also Bath & Body Care Products, Detergents & Balsams or Disposables ( Paper Rolls, Fresheners, Cleaning Gloves or Garbage Bags up to 240 Liters ). Feel free to contact us for any question or price offer. Check out our Facebook Page for the latest products.</p>
 									<ul class="actions">
+										 <div id="blanket" style="display:none;"></div>
+										 <div id="popUpDiv" style="display:none;">
+    
+    									<a href="#" id="closeLink" >Click to Close CSS Pop Up</a>
+    									</div>	
 										<li><a href="#" class="button">Learn more</a></li>
 									</ul>
 								</div>
