--- a/views/index.html
+++ b/views/index.html
@@ -56,7 +56,7 @@
     
     									<a href="#" id="closeLink" >Click to Close CSS Pop Up</a>
     									</div>	
-										<li><a href="#" class="button">Learn more</a></li>
+										<li><a id="link" class="button">Learn more</a></li>
 									</ul>
 								</div>
 							</div>
