--- a/views/index.html
+++ b/views/index.html
@@ -52,7 +52,29 @@
 									<p>Here you can order a wide range of Home Cleaning Chemicals and Disinfectants but also Bath & Body Care Products, Detergents & Balsams or Disposables ( Paper Rolls, Fresheners, Cleaning Gloves or Garbage Bags up to 240 Liters ). Feel free to contact us for any question or price offer. Check out our Facebook Page for the latest products.</p>
 									<ul class="actions">
 										
-										<li><a id="link" class="button">Learn more</a></li>
+										<li><a   class="btn btn-info btn-lg" data-toggle="modal" data-target="#myModal">Learn more</a></li>
+
+
+										<!-- Modal -->
+	<div id="myModal" class="modal fade" role="dialog">
+  <div class="modal-dialog">
+
+    <!-- Modal content-->
+    <div class="modal-content">
+      <div class="modal-header">
+        <button type="button" class="close" data-dismiss="modal">&times;</button>
+        <h4 class="modal-title">Modal Header</h4>
+      </div>
+      <div class="modal-body">
+        <p>Some text in the modal.</p>
+      </div>
+      <div class="modal-footer">
+        <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+      </div>
+    </div>
+
+  </div>
+</div>
 									</ul>
 								</div>
 							</div>
