--- a/views/index.html
+++ b/views/index.html
@@ -52,7 +52,7 @@
 									<p>Here you can order a wide range of Home Cleaning Chemicals and Disinfectants but also Bath & Body Care Products, Detergents & Balsams or Disposables ( Paper Rolls, Fresheners, Cleaning Gloves or Garbage Bags up to 240 Liters ). Feel free to contact us for any question or price offer. Check out our Facebook Page for the latest products.</p>
 									<ul class="actions">
 										
-										<li><button type="button"   class="btn btn-info btn-lg" data-toggle="modal" data-target="#myModal">Learn more</button></li>
+										<button type="button"   class="btn btn-info btn-lg" data-toggle="modal" data-target="#myModal">Learn more</button>
 
 
 										<!-- Modal -->
