--- a/views/index.html
+++ b/views/index.html
@@ -14,6 +14,7 @@
 		<link rel="stylesheet" href="assets/css/main.css" />
 		<!--[if lte IE 9]><link rel="stylesheet" href="assets/css/ie9.css" /><![endif]-->
 		<!--[if lte IE 8]><link rel="stylesheet" href="assets/css/ie8.css" /><![endif]-->
+		 <link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
   <script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js"></script>
 	</head>
@@ -55,7 +56,7 @@
 
 									<div class="container">
 										
-										<button type="button"   class="btn btn-info btn-lg" data-toggle="modal" data-target="#myModal">Learn more</button>
+										<button type="button"    data-toggle="modal" data-target="#myModal">Learn more</button>
 
 
 										<!-- Modal -->
