--- a/views/index.html
+++ b/views/index.html
@@ -11,7 +11,6 @@
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		<!--[if lte IE 8]><script src="assets/js/ie/html5shiv.js"></script><![endif]-->
-		<link rel="stylesheet" href="assets/css/main.css" />
 		<!--[if lte IE 9]><link rel="stylesheet" href="assets/css/ie9.css" /><![endif]-->
 		<!--[if lte IE 8]><link rel="stylesheet" href="assets/css/ie8.css" /><![endif]-->
 		 <link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
@@ -54,7 +53,7 @@
 									<h2>Home Cleaning</h2>
 									<p>Here you can order a wide range of Home Cleaning Chemicals and Disinfectants but also Bath & Body Care Products, Detergents & Balsams or Disposables ( Paper Rolls, Fresheners, Cleaning Gloves or Garbage Bags up to 240 Liters ). Feel free to contact us for any question or price offer. Check out our Facebook Page for the latest products.</p>
 
-									<ul class="container">
+									<div class="container">
 										
 										<button type="button"  size data-toggle="modal" data-target="#myModal">Learn more</button>
 
@@ -79,7 +78,7 @@
       
     </div>
   </div>
-									</ul>
+									</div>
 								</div>
 							</div>
 						</section>
